angular-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: NodePort
  selector:
    app: fullstack-angular
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 4200
      targetPort: 4200
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30002
