fs-springboot-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fullstack-sb-service
spec:
  type: NodePort
  selector:
    app: fullstack-sb
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8081
      targetPort: 8081
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30009
